misc: maintain openlane
This PR migrates OpenLane away from Efabless infrastructure so old designs taped-out using OpenLane may be taped out again in the future.

A message clarifying the maintenance status of OpenLane has been added. Ciel has been replaced with Volare. The CI has been updated appropriately, and the repository now uses the GitHub Container Repository.)

All Python files have been re-linted using more modern tools.

This commit has no effect on the logical operation of OpenLane.

--- a/.github/actions/docker_build/action.yml
+++ b/.github/actions/docker_build/action.yml
@@ -16,11 +16,11 @@ inputs:
   tool_repository:
     description: The Docker repository in which to store tools
     required: false
-    default: "efabless/openlane-tools"
+    default: "ghcr.io/the-openroad-project/openlane-tools"
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: docker/setup-buildx-action@v2
     - uses: ./.github/actions/set_env_variables
 
@@ -36,9 +36,6 @@ runs:
       with:
         username: ${{ inputs.dockerhub_user }}
         password: ${{ inputs.dockerhub_password }}
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
 
     - name: Docker Build
       shell: bash
