ci: uses cache for PDKs

--- a/.github/actions/set_env_variables/action.yml
+++ b/.github/actions/set_env_variables/action.yml
@@ -9,7 +9,7 @@ runs:
 
     - name: Export PDK ROOT
       shell: bash
-      run: echo "PDK_ROOT=/usr/local/pdk" >> $GITHUB_ENV
+      run: echo "PDK_ROOT=$HOME/.ciel" >> $GITHUB_ENV
 
     - name: Export Branch Name
       shell: bash
