--- a/.github/workflows/openlane_ci.yml
+++ b/.github/workflows/openlane_ci.yml
@@ -1,10 +1,14 @@
 name: CI
 
 on:
+  # Runs on all pushes to branches
   push:
+  # Runs on all PRs
   pull_request:
+  # Runs every day at midnight UTC
   schedule:
     - cron: "0 0 * * *"
+  # Manual Dispatch
   workflow_dispatch:
 
 jobs:
@@ -44,7 +48,6 @@ jobs:
             --pdk-family $PDK\
             --github-token ${{ secrets.GITHUB_TOKEN }}\
             ${{ steps.set-rev.outputs.opdks_rev }}
-
   prepare_test_matrices:
     name: Prepare Test Matrices
     runs-on: ubuntu-22.04
@@ -72,9 +75,39 @@ jobs:
           fi
           echo "issue_regression_matrix=$(python3 -m tests get_matrix)" >> $GITHUB_OUTPUT
 
+  docker_build_amd64:
+    name: Docker Build (amd64)
+    runs-on: ubuntu-22.04
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        uses: ./.github/actions/docker_build
+        with:
+          arch: amd64
+          tool_repository: ${{ vars.TOOL_DOCKER_IMAGE }}
+          container_registry: ${{ vars.CONTAINER_REGISTRY || 'ghcr.io' }}
+          container_registry_user: ${{ vars.CR_USERNAME }}
+          container_registry_password: ${{ secrets.CR_PASSWORD }}
+  docker_build_arm64v8:
+    name: Docker Build (arm64v8)
+    runs-on: ubuntu-22.04-arm
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        uses: ./.github/actions/docker_build
+        with:
+          arch: arm64v8
+          tool_repository: ${{ vars.TOOL_DOCKER_IMAGE }}
+          container_registry: ${{ vars.CONTAINER_REGISTRY || 'ghcr.io' }}
+          container_registry_user: ${{ vars.CR_USERNAME }}
+          container_registry_password: ${{ secrets.CR_PASSWORD }}
   issue_regression_test:
     name: Regression Test (Test ${{ matrix.test }})
-    needs: [pdk_build, prepare_test_matrices]
+    needs: [docker_build_amd64, pdk_build, prepare_test_matrices]
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -84,6 +117,15 @@ jobs:
 
       - name: Set up environment variables
         uses: ./.github/actions/set_env_variables
+
+      - name: Download Docker Image
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-amd64
+          path: /tmp
+
+      - name: Import Docker Image
+        run: docker load --input /tmp/image-amd64.tar
 
       - name: Cache PDK
         id: cache-pdk
@@ -110,21 +152,31 @@ jobs:
         with:
           name: test_${{ matrix.test }}_logs
           path: ./test_logs
-
+  # Each test has two components: a fast test set and an extended test set.
+  # The fast test set is run on all PRs, etc. The extended test set runs on schedule.
   test:
     name: Test Design ${{ matrix.design.name }} (${{ matrix.design.pdk }}/${{matrix.design.scl}})
-    needs: [pdk_build, prepare_test_matrices]
+    needs: [docker_build_amd64, pdk_build, prepare_test_matrices]
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix: ${{ fromJSON(needs.prepare_test_matrices.outputs.design_matrix) }}
-    steps:
+   steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
 
       - name: Set up environment variables
         uses: ./.github/actions/set_env_variables
+
+      - name: Download Docker Image (amd64)
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-amd64
+          path: /tmp
+
+      - name: Import Docker Image
+        run: docker load --input /tmp/image-amd64.tar
 
       - name: Cache PDK
         id: cache-pdk
@@ -152,7 +204,8 @@ jobs:
 
       - name: Run Test
         run: |
-          python3 ${GITHUB_WORKSPACE}/.github/scripts/run_tests.py ${{ matrix.design.name }}
+          OPENLANE_IMAGE_NAME=$OPENLANE_IMAGE_NAME-amd64\
+            python3 ${GITHUB_WORKSPACE}/.github/scripts/run_tests.py ${{ matrix.design.name }}
 
       - name: Escape Design Name
         run: |
@@ -170,12 +223,20 @@ jobs:
   cleanup_and_deploy:
     name: Cleanup (and Possibly Deployment)
     needs:
-      [test, issue_regression_test]
+      [docker_build_amd64, docker_build_arm64v8, test, issue_regression_test]
     if: always()
     runs-on: ubuntu-22.04
     permissions:
       packages: write
     steps:
+      - name: Check If Going To Push An Image To Docker
+        # # Uncomment the next line if you want to only build & push a container if entire test set succeeds
+        # if: needs.test.result == 'success'
+        # Ruby snippet to print 0 if this is a PR or if there is no DOCKERHUB_USER secret set, otherwise, 1
+        run: |
+          export PUSHING=$(ruby -e 'if ("${{ github.event_name }}" != "pull_request" && "${{ vars.CR_USERNAME }}" != ""); print(1) else print(0) end')
+          echo "PUSHING=$PUSHING" >> $GITHUB_ENV
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -183,8 +244,78 @@ jobs:
       - name: Set up environment variables
         uses: ./.github/actions/set_env_variables
 
+      - name: Download Docker Image (amd64)
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-amd64
+          path: /tmp
+
+      - name: Download Docker Image (arm64v8)
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-arm64v8
+          path: /tmp
+
       - name: Write Hash
         run: |
           echo "GIT_COMMIT_HASH=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
-      # 这里可以保留其它你需要的自定义清理或部署相关步骤
+      - name: Import Docker Images
+        if: ${{ env.PUSHING == '1' }}
+        run: |
+          for arch in amd64 arm64v8; do
+            docker load --input /tmp/image-$arch.tar
+          done
+
+      - name: Create Tag
+        if: ${{ env.PUSHING == '1' && (env.BRANCH_NAME == vars.MAIN_BRANCH || env.BRANCH_NAME == 'superstable') }}
+        run: cd ${GITHUB_WORKSPACE}/ && python3 ${GITHUB_WORKSPACE}/.github/scripts/generate_tag.py
+
+      - name: Tag Commit
+        if: ${{ env.PUSHING == '1' && env.NEW_TAG != '' }}
+        uses: tvdias/github-tagger@v0.0.1
+        with:
+          tag: "${{ env.NEW_TAG }}"
+          repo-token: "${{ secrets.BOT_TOKEN }}"
+
+      - name: Login to Container Registry
+        if: ${{ env.PUSHING == '1' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.CONTAINER_REGISTRY }}
+          username: ${{ vars.CR_USERNAME }}
+          password: ${{ secrets.CR_PASSWORD }}
+
+      - name: Start Tag List
+        if: ${{ env.PUSHING == '1' }}
+        run: |
+          echo "TAG_LIST=" >> $GITHUB_ENV
+
+      - name: Docker Tag (Branches)
+        if: ${{ env.PUSHING == '1' && github.event_name == 'push' }}
+        run: |
+          echo "TAG_LIST=$TAG_LIST ${{ env.BRANCH_NAME }}" >> $GITHUB_ENV
+
+      - name: Docker Tag (Main Branch Hashes)
+        if: ${{ env.PUSHING == '1' && github.event_name == 'push' && env.BRANCH_NAME == vars.MAIN_BRANCH }}
+        run: |
+          echo "TAG_LIST=$TAG_LIST ${{ env.GIT_COMMIT_HASH }}" >> $GITHUB_ENV
+
+      - name: Docker Push (Main Branch Tags/Latest)
+        if: ${{ env.PUSHING == '1' && github.event_name == 'push' && env.BRANCH_NAME == vars.MAIN_BRANCH && env.NEW_TAG != '' }}
+        run: |
+          echo "TAG_LIST=$TAG_LIST ${{ env.NEW_TAG }} latest" >> $GITHUB_ENV
+
+      - name: Docker Pushes
+        if: ${{ env.PUSHING == '1' }}
+        run: |
+          for tag in $TAG_LIST; do
+            for arch in amd64 arm64v8; do
+              docker image tag ${{ env.OPENLANE_IMAGE_NAME }}-$arch ${{ vars.DOCKER_IMAGE }}:$tag-$arch
+              docker push ${{ vars.DOCKER_IMAGE }}:$tag-$arch
+            done
+            docker manifest create ${{ vars.DOCKER_IMAGE }}:$tag\
+              --amend ${{ vars.DOCKER_IMAGE }}:$tag-amd64\
+              --amend ${{ vars.DOCKER_IMAGE }}:$tag-arm64v8
+            docker manifest push ${{ vars.DOCKER_IMAGE }}:$tag
+          done
